--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,11 @@ dependencies:
   just_audio: ^0.9.34
   noise_meter: ^4.0.1
   screenshot: ^2.1.0
+  firebase_core: ^2.15.1
+  firebase_database: ^10.2.5
+  cloud_firestore: ^4.9.1
+  firebase_auth: ^4.9.0
+  firebase_storage: ^11.2.6
   intl: ^0.18.1
   path: ^1.8.3
   http: ^1.1.0
