--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -68,5 +68,10 @@ flutter {
 }
 
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.github.HBiSoft:HBRecorder:3.0.1'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.github.HBiSoft:HBRecorder:2.0.0'
 }
+
