--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_database: ^10.2.5
   cloud_firestore: ^4.9.1
   firebase_auth: ^4.9.0
+  speech_to_text: ^6.6.0
   firebase_storage: ^11.2.6
   device_screen_recorder: ^0.0.4
   intl: ^0.18.1
