--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,6 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flutter_screenutil: ^5.8.4
   shared_preferences: ^2.2.0
   flip_card: ^0.7.0
   camera: ^0.10.5+2
@@ -52,6 +51,7 @@ dependencies:
   cloud_firestore: ^4.9.1
   firebase_auth: ^4.9.0
   speech_to_text: ^6.6.0
+  deepgram_speech_to_text: ^1.0.1
   firebase_storage: ^11.2.6
   device_screen_recorder: ^0.0.4
   intl: ^0.18.1
