--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_database: ^10.2.5
   cloud_firestore: ^4.9.1
   firebase_auth: ^4.9.0
+  google_speech: ^5.2.0+1
   speech_to_text: ^6.6.0
   deepgram_speech_to_text: ^1.0.1
   firebase_storage: ^11.2.6
